Fix: 修复订阅表单URL错误，添加邮箱验证，显示搜索功能

--- a/index.html
+++ b/index.html
@@ -2681,8 +2681,8 @@
             <p class="blog-quote" data-zh="深入思考是一种稀有的能力，持续成长是一生的旅程。" data-en="Deep thinking is a scarce ability, continuous growth is a lifelong journey.">深入思考是一种稀有的能力，持续成长是一生的旅程。</p>
         </div>
 
-        <!-- 搜索和筛选区域 - 暂时隐藏（等有内容后显示）-->
-        <div class="search-filter-section" style="display: none;">
+        <!-- 搜索和筛选区域 -->
+        <div class="search-filter-section">
             <!-- 搜索框 -->
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="搜索文章..." oninput="filterArticles()">
