Fix critical issues: duplicate form, GA ID, meta tags, sitemap dates

--- a/archive.html
+++ b/archive.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章归档 - COLIN</title>
+    <meta name="description" content="浏览COLIN博客的所有文章归档，包含写作、思维、学习、目标管理等个人成长相关内容。">
+    <meta name="keywords" content="文章归档,博客,写作,思维,学习,目标管理,个人成长">
 
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPQTS8G2HD"></script>
