--- a/health-check.html
+++ b/health-check.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网站健康检查 | COLIN</title>
     <meta name="description" content="网站健康检查页面 - 检查网站各项功能和配置是否正常">
+    <meta name="keywords" content="健康检查,网站检测,性能监测,SEO检查">
 
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPQTS8G2HD"></script>
