--- a/article.html
+++ b/article.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章详情 - COLIN</title>
+    <meta name="description" content="阅读COLIN博客的深度文章，关于写作、思维、学习、目标管理等个人成长主题。">
+    <meta name="keywords" content="文章,博客,深度思考,终身学习,个人成长,写作技巧">
 
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPQTS8G2HD"></script>
