--- a/subscribe.html
+++ b/subscribe.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>订阅获取免费资源 - COLIN</title>
+    <meta name="description" content="订阅COLIN博客，获取每周精选写作技巧、目标管理方法、思维模型解析和学习方法更新。">
+    <meta name="keywords" content="订阅,newsletter,写作技巧,目标管理,思维模型,学习方法,个人成长">
 
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPQTS8G2HD"></script>
@@ -235,14 +237,6 @@
                 <div class="form-group">
                     <input type="email" id="email" name="EMAIL" placeholder="你的邮箱地址" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="请输入有效的邮箱地址" />
                     <div id="emailError" style="color: #e74c3c; font-size: 0.85rem; margin-top: 5px; display: none;">请输入有效的邮箱地址</div>
-                </div>
-                <button type="submit" class="submit-btn" id="submitBtn">立即订阅 →</button>
-            </form>
-                <div class="form-group">
-                    <input type="text" id="name" name="FNAME" placeholder="你的名字（可选）" />
-                </div>
-                <div class="form-group">
-                    <input type="email" id="email" name="EMAIL" placeholder="你的邮箱地址" required />
                 </div>
                 <button type="submit" class="submit-btn" id="submitBtn">立即订阅 →</button>
             </form>
