Remove fake testimonials from sales page for authenticity

--- a/销售页面完整版.html
+++ b/销售页面完整版.html
@@ -250,39 +250,18 @@
             font-size: 0.9rem;
         }
 
-        /* Testimonials */
-        .testimonials {
+        /* FAQ */
+        .faq-section {
             margin: 40px 0;
         }
 
-        .testimonials h3 {
+        .faq-section h3 {
             text-align: center;
             font-size: 1.8rem;
             color: #2c3e50;
             margin-bottom: 30px;
         }
 
-        .testimonial-card {
-            background: #f8f9fa;
-            padding: 25px;
-            border-radius: 12px;
-            margin-bottom: 20px;
-            border-left: 4px solid #667eea;
-        }
-
-        .testimonial-text {
-            font-style: italic;
-            color: #555;
-            margin-bottom: 15px;
-            line-height: 1.8;
-        }
-
-        .testimonial-author {
-            font-weight: bold;
-            color: #2c3e50;
-        }
-
-        /* FAQ */
         .faq-item {
             margin-bottom: 20px;
             padding: 20px;
@@ -566,32 +545,6 @@
                 </tbody>
             </table>
 
-            <!-- Testimonials -->
-            <div class="testimonials">
-                <h3>⭐ 用户评价 (4.8/5.0)</h3>
-
-                <div class="testimonial-card">
-                    <div class="testimonial-text">
-                        "写作模板太好用了！以前写一篇文章要2小时，现在30分钟搞定。30天行动指南帮我把写作变成了习惯。"
-                    </div>
-                    <div class="testimonial-author">— 张伟 · 程序员</div>
-                </div>
-
-                <div class="testimonial-card">
-                    <div class="testimonial-text">
-                        "目标套装让我终于完成了拖延3年的项目。90天行动指南很系统，一步步跟着做，不知不觉就达成了目标。"
-                    </div>
-                    <div class="testimonial-author">— 王芳 · 自由职业者</div>
-                </div>
-
-                <div class="testimonial-card">
-                    <div class="testimonial-text">
-                        "Newsletter选题库太省心了，再也不用愁写什么了。运营指南帮我建立了稳定的读者群。"
-                    </div>
-                    <div class="testimonial-author">— 李明 · 个人博客主</div>
-                </div>
-            </div>
-
             <!-- Trust Badges -->
             <div class="trust-badges">
                 <div class="trust-badge">
@@ -624,8 +577,8 @@
             </a>
 
             <!-- FAQ -->
-            <div class="testimonials">
-                <h3>❓ 常见问题</h3>
+            <div class="faq-section" style="margin: 40px 0;">
+                <h3 style="text-align: center; font-size: 1.8rem; color: #2c3e50; margin-bottom: 30px;">❓ 常见问题</h3>
 
                 <div class="faq-item">
                     <div class="faq-question">
