为所有页面添加返回顶部按钮
- archive.html (文章归档页) 添加返回顶部按钮
- health-check.html (健康检查页) 添加返回顶部按钮
- subscribe.html (订阅页) 添加返回顶部按钮
- 销售页面完整版.html (销售页面) 添加返回顶部按钮

返回顶部按钮功能：
- 滚动超过300px后显示
- 平滑滚动到顶部
- 统一的紫色渐变设计风格
- 响应式悬停效果

--- a/archive.html
+++ b/archive.html
@@ -248,6 +248,36 @@
             font-size: 0.9rem;
         }
 
+        /* 返回顶部按钮 */
+        .back-to-top {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s;
+            font-size: 24px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            z-index: 1000;
+        }
+
+        .back-to-top.visible {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .back-to-top:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+        }
+
         .back-link {
             display: inline-block;
             padding: 12px 24px;
@@ -502,6 +532,28 @@
                 }
             });
         }
+
+        // 返回顶部按钮
+        const backToTopBtn = document.createElement('button');
+        backToTopBtn.className = 'back-to-top';
+        backToTopBtn.innerHTML = '↑';
+        backToTopBtn.setAttribute('title', '返回顶部');
+        document.body.appendChild(backToTopBtn);
+
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 300) {
+                backToTopBtn.classList.add('visible');
+            } else {
+                backToTopBtn.classList.remove('visible');
+            }
+        });
+
+        backToTopBtn.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
     </script>
 </body>
 </html>
