--- a/archive.html
+++ b/archive.html
@@ -260,12 +260,18 @@
             border: none;
             border-radius: 50%;
             cursor: pointer;
-            opacity: 0;
-            visibility: hidden;
+            opacity: 1;
+            visibility: visible;
             transition: all 0.3s;
             font-size: 24px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-            z-index: 1000;
+            z-index: 9999;
+        }
+
+        .back-to-top.hidden {
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(20px);
         }
 
         .back-to-top.visible {
@@ -323,7 +329,7 @@
 </head>
 <body>
     <!-- 简化导航栏 -->
-    <nav style="background: #1a1a2e; padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000;">
+    <nav style="background: rgba(10, 10, 10, 0.95); padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; backdrop-filter: blur(10px); border-bottom: 1px solid #333;">
         <div style="max-width: 1400px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
             <a href="index.html" style="color: white; text-decoration: none; font-size: 1.5rem; font-weight: bold; font-family: Georgia, serif;">COLIN</a>
             <div style="display: flex; gap: 2rem; align-items: center;">
@@ -540,11 +546,14 @@
         backToTopBtn.setAttribute('title', '返回顶部');
         document.body.appendChild(backToTopBtn);
 
+        // 初始隐藏
+        backToTopBtn.classList.add('hidden');
+
         window.addEventListener('scroll', () => {
             if (window.scrollY > 300) {
-                backToTopBtn.classList.add('visible');
+                backToTopBtn.classList.remove('hidden');
             } else {
-                backToTopBtn.classList.remove('visible');
+                backToTopBtn.classList.add('hidden');
             }
         });
 
