--- a/article.html
+++ b/article.html
@@ -400,7 +400,7 @@
 </head>
 <body>
     <!-- 简化导航栏 -->
-    <nav style="background: #1a1a2e; padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000;">
+    <nav style="background: rgba(10, 10, 10, 0.95); padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; backdrop-filter: blur(10px); border-bottom: 1px solid #333;">
         <div style="max-width: 1400px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
             <a href="index.html" style="color: white; text-decoration: none; font-size: 1.5rem; font-weight: bold; font-family: Georgia, serif;">COLIN</a>
             <div style="display: flex; gap: 2rem; align-items: center;">
