--- a/archive.html
+++ b/archive.html
@@ -29,8 +29,8 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
-            background: #f5f5f7;
-            color: #1d1d1f;
+            background: #ffffff;
+            color: #000000;
         }
 
         .container {
@@ -43,7 +43,7 @@
             text-align: center;
             margin-bottom: 40px;
             padding: 40px;
-            background: white;
+            background: #ffffff;
             border-radius: 12px;
             box-shadow: 0 2px 20px rgba(0,0,0,0.05);
         }
@@ -219,13 +219,14 @@
         }
 
         .archive-item-title a {
-            color: #0071e3;
+            color: #000000;
             text-decoration: none;
             transition: color 0.2s;
+            font-weight: 600;
         }
 
         .archive-item-title a:hover {
-            color: #0055b3;
+            color: #333333;
         }
 
         .archive-item-meta {
@@ -255,7 +256,7 @@
             right: 30px;
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             border: none;
             border-radius: 50%;
@@ -266,6 +267,11 @@
             font-size: 24px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
             z-index: 9999;
+        }
+
+        .back-to-top:hover {
+            background: #333333;
+            transform: translateY(-3px);
         }
 
         .back-to-top.hidden {
@@ -287,7 +293,7 @@
         .back-link {
             display: inline-block;
             padding: 12px 24px;
-            background: #0071e3;
+            background: #000000;
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -296,7 +302,7 @@
         }
 
         .back-link:hover {
-            background: #0055b3;
+            background: #333333;
             transform: translateY(-2px);
         }
 
@@ -329,14 +335,14 @@
 </head>
 <body>
     <!-- 简化导航栏 -->
-    <nav style="background: rgba(10, 10, 10, 0.95); padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; backdrop-filter: blur(10px); border-bottom: 1px solid #333;">
+    <nav style="background: rgba(255, 255, 255, 0.98); padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; backdrop-filter: blur(10px); border-bottom: 1px solid #e5e5e5;">
         <div style="max-width: 1400px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
             <a href="index.html" style="color: white; text-decoration: none; font-size: 1.5rem; font-weight: bold; font-family: Georgia, serif;">COLIN</a>
             <div style="display: flex; gap: 2rem; align-items: center;">
-                <a href="index.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">首页</a>
-                <a href="archive.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">文章归档</a>
-                <a href="products.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">精选资源</a>
-                <a href="subscribe.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">订阅</a>
+                <a href="index.html" style="color: #000000; text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">首页</a>
+                <a href="archive.html" style="color: #000000; text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">文章归档</a>
+                <a href="products.html" style="color: #000000; text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">精选资源</a>
+                <a href="subscribe.html" style="color: #000000; text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">订阅</a>
             </div>
         </div>
     </nav>
