--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
         }
 
         :root {
+            --bg-primary: #ffffff;
+            --bg-secondary: #f5f5f5;
+            --bg-card: #ffffff;
+            --text-primary: #000000;
+            --text-secondary: #666666;
+            --accent: #000000;
+            --accent-hover: #333333;
+            --border: #e5e5e5;
+        }
+
+        /* 深色模式 */
+        [data-theme="dark"] {
             --bg-primary: #0a0a0a;
             --bg-secondary: #141414;
             --bg-card: #1a1a1a;
@@ -78,18 +90,6 @@
             --accent: #3b82f6;
             --accent-hover: #2563eb;
             --border: #2a2a2a;
-        }
-
-        /* 浅色模式 */
-        [data-theme="light"] {
-            --bg-primary: #ffffff;
-            --bg-secondary: #f5f5f5;
-            --bg-card: #ffffff;
-            --text-primary: #1a1a1a;
-            --text-secondary: #666666;
-            --accent: #3b82f6;
-            --accent-hover: #2563eb;
-            --border: #e5e5e5;
         }
 
         /* 阅读进度条 */
@@ -207,15 +207,16 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: rgba(10, 10, 10, 0.95);
+            background: rgba(255, 255, 255, 0.98);
             backdrop-filter: blur(10px);
             z-index: 1000;
-            border-bottom: 1px solid var(--border);
+            border-bottom: 1px solid #e5e5e5;
             transition: all 0.3s;
         }
 
-        [data-theme="light"] nav {
-            background: rgba(255, 255, 255, 0.95);
+        [data-theme="dark"] nav {
+            background: rgba(10, 10, 10, 0.98);
+            border-bottom: 1px solid #2a2a2a;
         }
 
         .nav-container {
