--- a/subscribe.html
+++ b/subscribe.html
@@ -29,7 +29,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
             line-height: 1.6;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #ffffff;
             min-height: 100vh;
             padding: 20px;
             display: flex;
@@ -94,7 +94,7 @@
         }
 
         .benefit-icon {
-            color: #667eea;
+            color: #000000;
             font-weight: bold;
             font-size: 1.2rem;
         }
@@ -125,7 +125,7 @@
         .submit-btn {
             width: 100%;
             padding: 18px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             border: none;
             border-radius: 12px;
@@ -137,20 +137,20 @@
 
         .submit-btn:hover {
             transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+            background: #333333;
         }
 
         .back-link {
             display: inline-block;
             margin-top: 25px;
-            color: #667eea;
+            color: #000000;
             text-decoration: none;
             font-weight: 600;
             transition: all 0.3s;
         }
 
         .back-link:hover {
-            color: #764ba2;
+            color: #333333;
         }
 
         .success-message {
@@ -195,7 +195,7 @@
             right: 30px;
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             border: none;
             border-radius: 50%;
@@ -206,6 +206,11 @@
             font-size: 24px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
             z-index: 9999;
+        }
+
+        .back-to-top:hover {
+            background: #333333;
+            transform: translateY(-3px);
         }
 
         .back-to-top.hidden {
