--- a/销售页面完整版.html
+++ b/销售页面完整版.html
@@ -29,7 +29,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
             line-height: 1.6;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #ffffff;
             min-height: 100vh;
             padding: 20px;
         }
@@ -40,23 +40,23 @@
         }
 
         .sales-card {
-            background: white;
+            background: #ffffff;
             border-radius: 20px;
             padding: 50px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.2);
+            box-shadow: 0 20px 60px rgba(0,0,0,0.08);
         }
 
         .back-link {
             display: inline-block;
             margin-bottom: 30px;
-            color: white;
+            color: #000000;
             text-decoration: none;
             font-weight: 600;
             transition: all 0.3s;
         }
 
         .back-link:hover {
-            color: rgba(255,255,255,0.8);
+            color: #333333;
         }
 
         /* Header */
@@ -76,13 +76,13 @@
         }
 
         .header .subtitle {
-            color: #666;
+            color: #666666;
             font-size: 1.2rem;
             margin-bottom: 20px;
         }
 
         .price-banner {
-            background: linear-gradient(135deg, #ff6b6b 0%, #feca57 100%);
+            background: #000000;
             color: white;
             padding: 25px 40px;
             border-radius: 15px;
@@ -149,7 +149,7 @@
         }
 
         .product-item .price {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             padding: 5px 15px;
             border-radius: 20px;
@@ -173,7 +173,7 @@
             content: "✓";
             position: absolute;
             left: 0;
-            color: #667eea;
+            color: #000000;
             font-weight: bold;
         }
 
@@ -196,7 +196,7 @@
         }
 
         .comparison-table th {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             font-weight: bold;
             font-size: 1.1rem;
@@ -207,9 +207,9 @@
         }
 
         .comparison-table .highlight {
-            background: linear-gradient(135deg, #fff5e6 0%, #fff0d4 100%);
+            background: #f5f5f5;
             font-weight: bold;
-            color: #ff6b6b;
+            color: #000000;
             font-size: 1.2rem;
         }
 
@@ -297,7 +297,7 @@
             display: block;
             width: 100%;
             padding: 25px 40px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             text-align: center;
             text-decoration: none;
@@ -305,18 +305,18 @@
             font-size: 1.4rem;
             font-weight: bold;
             margin: 30px 0;
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
             transition: all 0.3s;
         }
 
         .cta-button:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.5);
+            background: #333333;
         }
 
         /* Urgency Banner */
         .urgency-banner {
-            background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+            background: #000000;
             color: white;
             padding: 20px;
             border-radius: 12px;
@@ -398,7 +398,7 @@
             right: 30px;
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             border: none;
             border-radius: 50%;
@@ -409,6 +409,11 @@
             font-size: 24px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
             z-index: 9999;
+        }
+
+        .back-to-top:hover {
+            background: #333333;
+            transform: translateY(-3px);
         }
 
         .back-to-top.hidden {
