完成Dan Koe极简黑白风格全部更新
- 更新products.html所有紫色渐变为黑白
- 更新article.html阅读进度条和返回顶部按钮
- 更新archive.html剩余的紫色元素
- 统一所有按钮为黑色背景
- 统一所有装饰元素为黑白色系
- 移除所有品牌色渐变，使用纯极简风格

--- a/archive.html
+++ b/archive.html
@@ -78,12 +78,12 @@
         }
 
         .tag-btn:hover {
-            background: #667eea;
+            background: #000000;
             color: white;
         }
 
         .tag-btn.active {
-            background: #667eea;
+            background: #000000;
             color: white;
         }
 
@@ -95,7 +95,7 @@
         }
 
         .stat-card {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             padding: 20px;
             border-radius: 12px;
