--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
             line-height: 1.6;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #ffffff;
             min-height: 100vh;
             padding: 20px;
         }
@@ -90,7 +90,7 @@
             flex-wrap: wrap;
             margin: 20px 0;
             padding: 20px;
-            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+            background: #f5f5f5;
             border-radius: 12px;
         }
 
@@ -104,7 +104,7 @@
 
         .result-item span {
             font-weight: bold;
-            color: #667eea;
+            color: #000000;
         }
 
         /* Loading 动画 */
@@ -114,7 +114,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -142,7 +142,7 @@
 
         /* 骨架屏 */
         .skeleton {
-            background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+            background: linear-gradient(90deg, #f5f5f5 25%, #e5e5e5 50%, #f5f5f5 75%);
             background-size: 200% 100%;
             animation: shimmer 1.5s infinite;
             border-radius: 8px;
@@ -170,12 +170,12 @@
         }
 
         .search-box:focus {
-            border-color: #667eea;
-            box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.1);
+            border-color: #000000;
+            box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
         }
 
         .price-banner {
-            background: linear-gradient(135deg, #ff6b6b 0%, #feca57 100%);
+            background: #000000;
             color: white;
             padding: 20px;
             border-radius: 15px;
@@ -229,17 +229,17 @@
         }
 
         .tag-recommended {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
         }
 
         .tag-normal {
-            background: #f0f0f0;
-            color: #666;
+            background: #f5f5f5;
+            color: #666666;
         }
 
         .product-desc {
-            color: #555;
+            color: #555555;
             margin-bottom: 25px;
             line-height: 1.8;
             font-size: 1.05rem;
@@ -252,7 +252,7 @@
 
         .features li {
             padding: 10px 0;
-            color: #555;
+            color: #555555;
             padding-left: 35px;
             position: relative;
         }
@@ -261,7 +261,7 @@
             content: "✓";
             position: absolute;
             left: 0;
-            color: #667eea;
+            color: #000000;
             font-weight: bold;
             font-size: 1.2rem;
         }
@@ -269,7 +269,7 @@
         .product-price {
             font-size: 3rem;
             font-weight: bold;
-            color: #ff6b6b;
+            color: #000000;
             margin-bottom: 25px;
         }
 
@@ -306,17 +306,17 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
         }
 
         .btn-alipay {
-            background: linear-gradient(135deg, #1677ff 0%, #096dd9 100%);
+            background: #1677ff;
             color: white;
         }
 
         .btn-wechat {
-            background: linear-gradient(135deg, #07c160 0%, #059969 100%);
+            background: #07c160;
             color: white;
         }
 
@@ -328,7 +328,7 @@
         }
 
         .feature-item {
-            background: #f8f9fa;
+            background: #f5f5f5;
             padding: 15px 20px;
             border-radius: 10px;
             display: flex;
@@ -598,7 +598,7 @@
             width: 50px;
             height: 50px;
             border-radius: 50%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000000;
             color: white;
             display: flex;
             align-items: center;
@@ -741,7 +741,7 @@
         }
 
         .guarantee-section {
-            background: linear-gradient(135deg, #a29bfe 0%, #6c5ce7 100%);
+            background: #000000;
             padding: 30px;
             border-radius: 15px;
             margin: 30px 0;
