--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             --bg-card: #1a1a1a;
             --text-primary: #ffffff;
             --text-secondary: #a0a0a0;
-            --accent: #3b82f6;
-            --accent-hover: #2563eb;
+            --accent: #ffffff;
+            --accent-hover: #e0e0e0;
             --border: #2a2a2a;
         }
 
@@ -99,7 +99,7 @@
             left: 0;
             width: 0%;
             height: 3px;
-            background: linear-gradient(90deg, var(--accent), #8b5cf6);
+            background: var(--accent);
             z-index: 9999;
             transition: width 0.1s ease;
         }
