--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             --accent: #000000;
             --accent-hover: #333333;
             --border: #e5e5e5;
+            --button-bg-dark: #000000;
+            --button-text-dark: #ffffff;
         }
 
         /* 深色模式 */
@@ -90,6 +92,8 @@
             --accent: #ffffff;
             --accent-hover: #e0e0e0;
             --border: #2a2a2a;
+            --button-bg-dark: #ffffff;
+            --button-text-dark: #000000;
         }
 
         /* 阅读进度条 */
@@ -130,7 +134,7 @@
         .lang-btn.active {
             background: var(--accent);
             border-color: var(--accent);
-            color: white;
+            color: var(--button-text-dark);
         }
 
         /* 主题切换按钮 */
@@ -401,7 +405,7 @@
 
         .search-btn:hover {
             border-color: var(--accent);
-            color: var(--text-primary);
+            color: var(--button-text-dark);
         }
 
         .search-modal {
@@ -545,7 +549,7 @@
             font-weight: 900;
             margin-bottom: 2rem;
             letter-spacing: 8px;
-            background: linear-gradient(135deg, #3b82f6, #8b5cf6, #3b82f6);
+            background: linear-gradient(135deg, #000000, #666666, #000000);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -704,7 +708,7 @@
             left: 0;
             right: 0;
             height: 3px;
-            background: linear-gradient(90deg, var(--accent), #8b5cf6);
+            background: var(--accent);
             transform: scaleX(0);
             transition: transform 0.3s;
         }
@@ -712,7 +716,7 @@
         .article-card:hover {
             transform: translateY(-3px);
             border-color: var(--accent);
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.15);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
         }
 
         .article-card:hover::before {
@@ -722,7 +726,7 @@
         .article-category {
             display: inline-block;
             background: var(--accent);
-            color: white;
+            color: var(--button-text-dark);
             padding: 0.2rem 0.6rem;
             border-radius: 12px;
             font-size: 0.7rem;
@@ -2653,10 +2657,10 @@
             
             <!-- CTA按钮组 -->
             <div style="margin-top: 2.5rem; display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
-                <a href="products.html" style="padding: 1rem 2.5rem; background: linear-gradient(135deg, #3b82f6, #8b5cf6); color: white; border: none; border-radius: 50px; font-size: 1.1rem; font-weight: 700; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4); white-space: nowrap;" onmouseover="this.style.transform='translateY(-3px)'" onmouseout="this.style.transform='translateY(0)'">
+                <a href="products.html" style="padding: 1rem 2.5rem; background: #000000; color: white; border: none; border-radius: 50px; font-size: 1.1rem; font-weight: 700; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); white-space: nowrap;" onmouseover="this.style.transform='translateY(-3px)'" onmouseout="this.style.transform='translateY(0)'">
                     🚀 开始成长之旅
                 </a>
-                <a href="#resources" style="padding: 1rem 2.5rem; background: rgba(59, 130, 246, 0.1); color: var(--accent); border: 2px solid var(--accent); border-radius: 50px; font-size: 1.1rem; font-weight: 600; cursor: pointer; text-decoration: none; transition: all 0.3s; white-space: nowrap;" onmouseover="this.style.background='rgba(59, 130, 246, 0.2)'" onmouseout="this.style.background='rgba(59, 130, 246, 0.1)'">
+                <a href="#resources" style="padding: 1rem 2.5rem; background: rgba(0, 0, 0, 0.1); color: var(--accent); border: 2px solid var(--accent); border-radius: 50px; font-size: 1.1rem; font-weight: 600; cursor: pointer; text-decoration: none; transition: all 0.3s; white-space: nowrap;" onmouseover="this.style.background='rgba(0, 0, 0, 0.2)'" onmouseout="this.style.background='rgba(0, 0, 0, 0.1)'">
                     📦 查看资源
                 </a>
             </div>
@@ -2668,7 +2672,7 @@
             <!-- 邮箱订阅 -->
             <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.8rem;">
                 <input type="email" id="subscribeEmail" placeholder="your@email.com" style="padding: 0.9rem 1.5rem; background: var(--bg-card); border: 1px solid var(--border); border-radius: 50px; color: var(--text-primary); font-size: 1rem; width: 300px;">
-                <button type="button" onclick="copySubscribeEmail()" style="padding: 0.9rem 2rem; background: var(--accent); color: white; border: none; border-radius: 50px; font-size: 1rem; font-weight: 600; cursor: pointer; white-space: nowrap;">订阅更新</button>
+                <button type="button" onclick="copySubscribeEmail()" style="padding: 0.9rem 2rem; background: var(--accent); color: var(--button-text-dark); border: none; border-radius: 50px; font-size: 1rem; font-weight: 600; cursor: pointer; white-space: nowrap;">订阅更新</button>
             </div>
         </div>
     </section>
