--- a/products.html
+++ b/products.html
@@ -48,10 +48,37 @@
             box-sizing: border-box;
         }
 
+        :root {
+            --bg-primary: #ffffff;
+            --bg-secondary: #f5f5f5;
+            --bg-card: #ffffff;
+            --text-primary: #000000;
+            --text-secondary: #666666;
+            --accent: #000000;
+            --accent-hover: #333333;
+            --border: #e5e5e5;
+            --button-bg-dark: #000000;
+            --button-text-dark: #ffffff;
+        }
+
+        /* 深色模式 */
+        [data-theme="dark"] {
+            --bg-primary: #0a0a0a;
+            --bg-secondary: #141414;
+            --bg-card: #1a1a1a;
+            --text-primary: #ffffff;
+            --text-secondary: #a0a0a0;
+            --accent: #ffffff;
+            --accent-hover: #e0e0e0;
+            --border: #2a2a2a;
+            --button-bg-dark: #ffffff;
+            --button-text-dark: #000000;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
             line-height: 1.6;
-            background: #ffffff;
+            background: var(--bg-primary);
             min-height: 100vh;
             padding: 20px;
         }
@@ -60,6 +87,27 @@
             max-width: 900px;
             margin: 0 auto;
             padding-top: 80px;
+        }
+
+        /* 主题切换按钮 */
+        .theme-switcher {
+            width: 45px;
+            height: 45px;
+            border-radius: 50%;
+            background: var(--bg-card);
+            border: 1px solid var(--border);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 1.2rem;
+            transition: all 0.3s;
+        }
+
+        .theme-switcher:hover {
+            background: var(--accent);
+            border-color: var(--accent);
+            transform: rotate(180deg);
         }
 
         .header {
@@ -940,18 +988,95 @@
                 justify-content: center;
             }
         }
+
+        /* 深色模式适配 */
+        [data-theme="dark"] nav {
+            background: rgba(10, 10, 10, 0.98);
+            border-bottom: 1px solid #2a2a2a;
+        }
+
+        [data-theme="dark"] nav a {
+            color: rgba(255,255,255,0.8);
+        }
+
+        [data-theme="dark"] nav a:hover {
+            color: #ffffff;
+        }
+
+        [data-theme="dark"] .header,
+        [data-theme="dark"] .product,
+        [data-theme="dark"] .footer,
+        [data-theme="dark"] .single-products-section {
+            background: var(--bg-card);
+        }
+
+        [data-theme="dark"] .header h1,
+        [data-theme="dark"] .product-title,
+        [data-theme="dark"] .footer h3,
+        [data-theme="dark"] .single-products-header h3 {
+            color: var(--text-primary);
+        }
+
+        [data-theme="dark"] .header .subtitle,
+        [data-theme="dark"] .product-desc,
+        [data-theme="dark"] .features li {
+            color: var(--text-secondary);
+        }
+
+        [data-theme="dark"] .search-box {
+            background: var(--bg-card);
+            border-color: var(--border);
+            color: var(--text-primary);
+        }
+
+        [data-theme="dark"] .result-highlight {
+            background: var(--bg-secondary);
+        }
+
+        [data-theme="dark"] .feature-item {
+            background: var(--bg-secondary);
+        }
+
+        [data-theme="dark"] .user-stories {
+            background: var(--bg-secondary);
+        }
+
+        [data-theme="dark"] .story-card {
+            background: var(--bg-card);
+        }
+
+        [data-theme="dark"] .comparison-card {
+            background: var(--bg-secondary);
+        }
+
+        [data-theme="dark"] .faq-item {
+            background: var(--bg-card);
+            border-color: var(--border);
+        }
+
+        [data-theme="dark"] .faq-question,
+        [data-theme="dark"] .faq-answer {
+            color: var(--text-primary);
+        }
+
+        [data-theme="dark"] .contact-info {
+            background: var(--bg-secondary);
+        }
     </style>
 </head>
 <body>
     <!-- 简化导航栏 -->
-    <nav style="background: #1a1a2e; padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000;">
+    <nav style="background: var(--bg-card); padding: 1rem 2rem; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; backdrop-filter: blur(10px); border-bottom: 1px solid var(--border);">
         <div style="max-width: 1400px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
-            <a href="index.html" style="color: white; text-decoration: none; font-size: 1.5rem; font-weight: bold; font-family: Georgia, serif;">COLIN</a>
+            <a href="index.html" style="color: var(--text-primary); text-decoration: none; font-size: 1.5rem; font-weight: bold; font-family: Georgia, serif;">COLIN</a>
             <div style="display: flex; gap: 2rem; align-items: center;">
-                <a href="index.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">首页</a>
-                <a href="archive.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">文章归档</a>
-                <a href="products.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">精选资源</a>
-                <a href="subscribe.html" style="color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">订阅</a>
+                <a href="index.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">首页</a>
+                <a href="archive.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">文章归档</a>
+                <a href="products.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">精选资源</a>
+                <a href="subscribe.html" style="color: var(--text-primary); text-decoration: none; font-size: 0.95rem; transition: color 0.3s;">订阅</a>
+                <button class="theme-switcher" aria-label="Toggle theme">
+                    <span class="theme-icon">🌙</span>
+                </button>
             </div>
         </div>
     </nav>
@@ -3000,6 +3125,32 @@
                 closePaymentModal();
             }
         });
+
+        // ===== 主题切换功能 =====
+        let currentTheme = localStorage.getItem('preferred-theme') || 'light';
+        document.documentElement.setAttribute('data-theme', currentTheme);
+
+        const themeIcon = document.querySelector('.theme-icon');
+        if (themeIcon) {
+            themeIcon.textContent = currentTheme === 'dark' ? '🌙' : '☀️';
+        }
+
+        function toggleTheme() {
+            currentTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            document.documentElement.setAttribute('data-theme', currentTheme);
+
+            const themeIcon = document.querySelector('.theme-icon');
+            if (themeIcon) {
+                themeIcon.textContent = currentTheme === 'dark' ? '🌙' : '☀️';
+            }
+
+            localStorage.setItem('preferred-theme', currentTheme);
+        }
+
+        const themeSwitcher = document.querySelector('.theme-switcher');
+        if (themeSwitcher) {
+            themeSwitcher.addEventListener('click', toggleTheme);
+        }
 
         // 页面加载完成后隐藏 loader
         window.addEventListener('load', function() {
